# appdynamics-mcp-server

./: .env.example  .gitignore  AppDynamics_MCP_ClaudeCode_Prompt.md  Dockerfile  README.md  controllers.json  controllers.json.example  main.py  pyproject.toml
auth/: appd_auth.py  simple_credentials.py  vault_client.py
client/: appd_client.py  rbac_client.py
docs/: APPDYNAMICS_MCP_ENHANCEMENT_TRACKER.yaml  GAPS.md  README.md  REQUIREMENTS.md  SINGLE_USER_MODE_DESIGN.md
docs/architecture/: ARCHITECTURE.md  MODULARIZATION_PLAN.md
docs/development/: DEVELOPER_GUIDE.md
docs/enhancements/: ENHANCEMENT_001_COMPLETE.md  ENHANCEMENT_002_COMPLETE.md  ENHANCEMENT_004_COMPLETE.md  ENHANCEMENT_005_COMPLETE.md  ENHANCEMENT_006_COMPLETE.md
docs/setup/: SETUP_GUIDE.md
models/: types.py
parsers/: snapshot_parser.py
parsers/stack/: dotnet.py  java.py  nodejs.py  python_parser.py
registries/: __init__.py  apps_registry.py  bt_registry.py  golden_registry.py
services/: bt_classifier.py  bt_naming.py  cache_invalidator.py  event_analyzer.py  health.py  incident_correlator.py  license_check.py  runbook_generator.py  snapshot_analyzer.py  snapshot_comparator.py  team_health.py  team_registry.py  trace_stitcher.py  user_resolver.py
tests/: conftest.py
tests/contract/: test_appd_response_shapes.py
tests/integration/: test_full_flow.py
tests/mocks/: appd_server.py
tests/unit/: test_bt_classifier.py  test_bt_naming.py  test_cache.py  test_enterprise_mode.py  test_permissions.py  (+9 more)
utils/: cache.py  cache_keys.py  metrics.py  rate_limiter.py  sanitizer.py  timezone.py
